# malaria-drug-action-engine

./: .gitignore  NOTICE  README.md  pyproject.toml
.github/: FUNDING.yml
docs/: benchmark_1b_preregistration.md  benchmark_1b_result.md  benchmark_2_notes.md  benchmark_2b_execution_blocked.md  benchmark_2b_execution_manifest.md  benchmark_2b_preregistration.md  benchmark_2b_result.md  parameters_pfcrt.md
examples/: benchmark_1b_exploratory.py  chloroquine_pfcrt.py  pfcrt_benchmark.py  pfdhfr_panel.py
results/benchmark_2b/: analyze.py  benchmark_2b_result.txt  build_variants.py  dock_all_gnina.sh  dock_all_vina.sh  prep_controls.py  scores_vina.csv
src/mdae/: __init__.py  benchmark.py  benchmark_1b.py  enzyme.py  exposure.py  function.py  oracle.py  parameters.py  pfcrt_data.py  pfdhfr_data.py  provenance.py  speciation.py
tests/: test_benchmark.py  test_benchmark_1b.py  test_enzyme.py  test_pfdhfr_panel.py  test_slice1.py
