[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mdae"
version = "0.0.1"
description = "Malaria Drug Action Engine — mechanistic molecule -> parasite-exposure -> function -> phenotype engine for P. falciparum"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Luis Felipe (girias)" }]
dependencies = ["numpy>=1.24", "scipy>=1.10"]

[project.optional-dependencies]
viz = ["matplotlib"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
